syntax = "proto3";

package blocksconvert;

option go_package = "blocksconvert";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

service Scheduler {
  // Returns next plan that builder should work on.
  rpc NextPlan(NextPlanRequest) returns (NextPlanResponse) {};
}

message NextPlanRequest {
  string builderName = 1;
}

message NextPlanResponse {
  string planFile = 1;
  string progressFile = 2;
}
